Preventing text from wrapping around checkbox

--- a/orchestra/static/orchestra/todos/todo-checklist.scss
+++ b/orchestra/static/orchestra/todos/todo-checklist.scss
@@ -5,8 +5,10 @@
     padding-bottom: 10px;
   }
   .todo {
+    margin-left: 18px;
     input[type=checkbox] {
       transform: scale(1.1);
+      margin-left: -22px;
     }
     label {
       align-items: end;
@@ -37,6 +39,7 @@
   .fa-circle-o {
     font-size: xx-small;
     vertical-align: middle;
+    margin-left: -18px;
   }
 
   .angular-ui-tree-handle > label{
